--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,6 @@
 // Components
 @import './components/title';
 @import './components/logo';
-@import './components/main-button';
 @import './components/list';
 @import './components/soc-list';
 @import './components/backdrop';
@@ -25,3 +24,4 @@
 @import './layouts/clients';
 @import './layouts/footer';
 @import './layouts/portfolio';
+@import './base/base';
