--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,27 +1,17 @@
-// Utilits
 @import './utilits/variables';
-@import './utilits/reset-styles';
-@import './utilits/visually-hidden';
-@import './utilits/is-hidden';
-// Base
 @import './base/base';
-@import './base/section';
-@import './base/container';
-// Components
-@import './components/title';
-@import './components/logo';
+@import './utilits/reset-styles';
 @import './components/list';
-@import './components/soc-list';
-@import './components/backdrop';
-@import './components/modal';
-
-// layouts
+@import './components/logo';
+@import './base/container';
 @import './layouts/header';
 @import './layouts/hero';
 @import './layouts/features';
-@import './layouts/example';
 @import './layouts/work';
+@import './layouts/team';
 @import './layouts/clients';
 @import './layouts/footer';
+@import './components/submit';
+@import './components/modal';
+@import './components/form';
 @import './layouts/portfolio';
-@import './base/base';
