--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,7 +11,6 @@
   box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.2), 1px 0px 1px rgba(0, 0, 0, 0.14),
     3px 0px 1px rgba(0, 0, 0, 0.12);
 }
-
 .modal__close {
   position: absolute;
   display: flex;
@@ -28,128 +27,41 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms,
     color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-  &:hover,
-  &:focus {
-    fill: var(--brand-color-left);
-    border-color: var(--accent-color);
-  }
 }
-
-.modal__field {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 10px;
-}
-.modal__name-lable {
-  display: block;
-  align-items: center;
-  justify-content: center;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 0.01em;
-  margin: 0;
-  margin-bottom: 4px;
-
-  color: rgba(117, 117, 117, 1);
-}
-
-.modal__name-input {
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 40px;
-  margin: 0;
-  padding-left: 42px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal__name-icon {
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal__close:hover,
+.modal__close:focus {
+  fill: var(--brand-color-left);
+  border-color: var(--accent-color);
+}
+
+.visually-hidden {
   position: absolute;
-  top: 50%;
-  left: 15px;
-  transform: translateY(5%);
-  display: inline-block;
-  width: 18px;
-  height: 18px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal__text-area {
-  width: 100%;
-  height: 120px;
-  resize: none;
-  padding: 12px 16px;
-
-  border: 1px solid;
-  border-radius: 4px;
-  border-color: rgba(33, 33, 33, 0.2);
-  color: rgba(117, 117, 117, 0.5);
-
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-}
-
-.modal__checkbox-field {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-.modal__form-checkbox {
-  position: absolute;
+  white-space: nowrap;
   width: 1px;
   height: 1px;
-  margin: -1px;
-  padding: 0;
   overflow: hidden;
   border: 0;
+  padding: 0;
   clip: rect(0 0 0 0);
-}
-.modal__check-lable {
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  line-height: 1.71;
-  color: var(--contacts-color);
-}
-
-.modal__form-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
-  margin-top: 30px;
-  padding: 10px 56px;
-  border: none;
-  border-radius: 4px;
-  text-align: center;
-  text-decoration: none;
-  font-family: var(--main-font);
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  cursor: pointer;
-  background-color: var(--brand-color-left);
-  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
-  color: var(--brand-color-fut);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal__name-input:hover,
-.modal__name-input:focus {
-  border-color: var(--brand-color-left);
-}
-.modal__name-input:focus-within + .modal__name-icon {
-  fill: var(--brand-color-left);
-  stroke: var(--brand-color-left);
-}
-
-.modal__name-icon:hover {
-  fill: var(--brand-color-left);
-}
-.modal__text-area:hover,
-.modal__text-area:focus {
-  border-color: var(--brand-color-left);
+  clip-path: inset(50%);
+  margin: -1px;
 }
