--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,3 +1,7 @@
+.client {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .client__list {
   display: flex;
   align-items: center;
@@ -19,19 +23,14 @@
   height: 92px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms,
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    fill: var(--brand-color-left);
-    border: 1px solid var(--brand-color-left);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+}
+.client__link:hover,
+.client__link:focus {
+  fill: var(--brand-color-left);
+  border: 1px solid var(--brand-color-left);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
 .client__title {
   font-family: var(--main-font);
   font-weight: 700;
