--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -13,7 +13,7 @@
 }
 
 .feature-list {
-  flex-basis: calc((100%-3 * 30px) / 4);
+  flex-basis: calc((100% - 3 * 30px) / 4);
   list-style-type: none;
 }
 
@@ -28,7 +28,7 @@
   width: 270px;
 }
 
-.features-list__item--antena::before {
+.features-list__item-antena::before {
   display: block;
   content: '';
   height: 120px;
@@ -41,7 +41,7 @@
   margin-bottom: 30px;
 }
 
-.features-list__item--clock::before {
+.features-list__item-clock::before {
   display: block;
   content: '';
   height: 120px;
@@ -54,7 +54,7 @@
   margin-bottom: 30px;
 }
 
-.features-list__item--diagram::before {
+.features-list__item-diagram::before {
   display: block;
   content: '';
   height: 120px;
@@ -67,7 +67,7 @@
   margin-bottom: 30px;
 }
 
-.features-list__item--astronaut::before {
+.features-list__item-astronaut::before {
   display: block;
   content: '';
   height: 120px;
@@ -79,6 +79,7 @@
 
   margin-bottom: 30px;
 }
+
 .features-list__title {
   font-family: var(--main-font);
   font-style: normal;
