--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -43,9 +43,10 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: var(--team-color-content);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-  &:hover,
-  &:focus {
-    background: #188ce8;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
-  }
+}
+
+.hero__btn:hover,
+.hero__btn:focus {
+  background: #188ce8;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
 }
