--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -3,6 +3,43 @@
   padding-top: 94px;
   padding-bottom: 94px;
 }
+
+.team__list {
+  display: flex;
+  list-style-type: none;
+  font-family: var(--main-font);
+  gap: 30px;
+}
+
+.team__item {
+  background-color: var(--brand-color-fut);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team__text {
+  font-family: var(--main-font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: calc(19 / 16);
+  letter-spacing: 0.03em;
+  color: var(--contacts-color);
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.team__main-title {
+  font-family: var(--main-font);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: calc(42 / 36);
+  color: var(--main-txt-cl);
+  text-align: center;
+  margin-bottom: 50px;
+}
+
 .team__title {
   font-family: var(--main-font);
   font-style: normal;
@@ -19,46 +56,36 @@
   padding-top: 30px;
   padding-bottom: 30px;
 }
+
 .team__socials {
   display: flex;
   align-items: baseline;
   justify-content: center;
   gap: 10px;
 }
+
 .team__socials-icon {
   fill: currentColor;
 }
-.team__list {
+
+.socials__link {
   display: flex;
-  list-style-type: none;
-  font-family: var(--main-font);
-  gap: 30px;
-}
+  align-items: center;
+  justify-content: center;
 
-.team__item {
+  width: 44px;
+  height: 44px;
+
+  color: #afb1b8;
+
   background-color: var(--brand-color-fut);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-.team__text {
-  font-family: var(--main-font);
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: calc(19 / 16);
-  letter-spacing: 0.03em;
-  color: var(--contacts-color);
-  text-align: center;
-  margin-bottom: 30px;
+  border-radius: 50%;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
-.team__title {
-  font-family: var(--main-font);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: calc(42 / 36);
-  color: var(--main-txt-cl);
-  text-align: center;
-  margin-bottom: 50px;
+.socials__link:hover,
+.socials__link:focus {
+  color: var(--brand-color-fut);
+  background-color: var(--brand-color-left);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
 }
