--- a/css/main.css
+++ b/css/main.css
@@ -872,7 +872,7 @@ ul {
   clip: rect(0 0 0 0);
 }
 
-.form-checkbox:checked + .modal__icon-chek {
+.modal__form-checkbox:checked + .modal__icon-chek {
   background-image: url(../img/icomoon/icon-check.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -881,11 +881,11 @@ ul {
   border-color: var(--brand-color-left);
 }
 
-.form-checkbox:focus + .icon-chek {
+.modal__form-checkbox:focus + .modal__icon-chek {
   border-color: var(--brand-color-left);
 }
 
-.icon-chek {
+.modal__icon-chek {
   display: inline-block;
   width: 16px;
   height: 15px;
