--- a/sass/components/_submit.scss
+++ b/sass/components/_submit.scss
@@ -35,7 +35,7 @@
 }
 .footer__submit-input:hover,
 .footer__submit-input:focus {
-  background-color: var(--brand-color-left);
+  border-color: var(--brand-color-left);
 }
 
 .footer__submit-btn {
