--- a/css/styles.css
+++ b/css/styles.css
@@ -483,18 +483,17 @@ ul {
   width: 44px;
   height: 44px;
 
-  color: #afb1b8;
+  fill: #afb1b8;
 
   background-color: var(--brand-color-fut);
   border-radius: 50%;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms,
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
-
 .socials__link:hover,
 .socials__link:focus {
-  color: var(--brand-color-fut);
+  fill: #fff;
   background-color: var(--brand-color-left);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
 }
 
 /**
