--- a/sass/components/_soc-list.scss
+++ b/sass/components/_soc-list.scss
@@ -6,16 +6,15 @@
   width: 44px;
   height: 44px;
 
-  color: #afb1b8;
+  fill: #afb1b8;
 
   background-color: var(--brand-color-fut);
   border-radius: 50%;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-
-  &:hover,
-  &:focus {
-    color: var(--brand-color-fut);
-    background-color: var(--brand-color-left);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
-  }
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms,
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+.socials__link:hover,
+.socials__link:focus {
+  fill: #fff;
+  background-color: var(--brand-color-left);
 }
