--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import './utilits/variables';
 @import './base/base';
-@import './utilits/reset-styles';
+@import './base/reset-styles';
 @import './components/list';
 @import './components/logo';
 @import './base/container';
