--- a/css/main.css
+++ b/css/main.css
@@ -99,9 +99,7 @@ ul {
   color: var(--main-txt-cl);
   text-decoration: none;
 }
-
-.nav__link:hover,
-.nav__link:focus {
+.nav__link:hover, .nav__link:focus {
   color: var(--brand-color-left);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
 }
@@ -170,9 +168,7 @@ ul {
   gap: 16px;
   padding: 32px 0px;
 }
-
-.contact__link:hover,
-.contact__link:focus {
+.contact__link:hover, .contact__link:focus {
   color: var(--brand-color-left);
 }
 
@@ -225,9 +221,7 @@ ul {
   border: var(--team-color-content);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
-
-.hero__btn:hover,
-.hero__btn:focus {
+.hero__btn:hover, .hero__btn:focus {
   background: #188ce8;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
 }
@@ -360,6 +354,22 @@ ul {
   position: relative;
 }
 
+.work__main-title {
+  font-family: var(--main-font);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.1666666667;
+  color: var(--main-txt-cl);
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.work__img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .team {
   background: var(--team-color-content);
   padding-top: 94px;
@@ -439,9 +449,7 @@ ul {
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms, fill 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
-
-.socials__link:hover,
-.socials__link:focus {
+.socials__link:hover, .socials__link:focus {
   fill: #fff;
   background-color: var(--brand-color-left);
 }
@@ -471,9 +479,7 @@ ul {
   height: 92px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms, fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.client__link:hover,
-.client__link:focus {
+.client__link:hover, .client__link:focus {
   fill: var(--brand-color-left);
   border: 1px solid var(--brand-color-left);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -631,9 +637,7 @@ ul {
   text-decoration: none;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.footer__link:hover,
-.footer__link:focus {
+.footer__link:hover, .footer__link:focus {
   color: var(--brand-color-left);
   text-decoration: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
@@ -1052,9 +1056,7 @@ ul {
   margin-bottom: 0px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.button:hover,
-.button:focus {
+.button:hover, .button:focus {
   background-color: var(--brand-color-left);
   color: var(--light-txt-cl);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -1113,15 +1115,13 @@ ul {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.project-link:hover, .project-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
+}
 
 .project-link:hover .overlay-desc,
 .project-link:focus .overlay-desc {
   transform: translateY(0);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
-}
-
-.project-link:hover,
-.project-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
 }/*# sourceMappingURL=main.css.map */
