--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -23,12 +23,12 @@
   height: 92px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms,
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.client__link:hover,
-.client__link:focus {
-  fill: var(--brand-color-left);
-  border: 1px solid var(--brand-color-left);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    fill: var(--brand-color-left);
+    border: 1px solid var(--brand-color-left);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .client__title {
