--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -138,10 +138,10 @@
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer__link:hover,
-.footer__link:focus {
-  color: var(--brand-color-left);
-  text-decoration: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
+  &:hover,
+  &:focus {
+    color: var(--brand-color-left);
+    text-decoration: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
+  }
 }
