--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -30,12 +30,11 @@
   letter-spacing: 0.02em;
   color: var(--main-txt-cl);
   text-decoration: none;
-}
-
-.nav__link:hover,
-.nav__link:focus {
-  color: var(--brand-color-left);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
+  &:hover,
+  &:focus {
+    color: var(--brand-color-left);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
+  }
 }
 
 .nav__link--current {
@@ -100,10 +99,10 @@
   align-items: center;
   gap: 16px;
   padding: 32px 0px;
-}
-.contact__link:hover,
-.contact__link:focus {
-  color: var(--brand-color-left);
+  &:hover,
+  &:focus {
+    color: var(--brand-color-left);
+  }
 }
 
 .contact__link:hover .contacts__icon {
