--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -95,14 +95,13 @@
   margin-bottom: 0px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button:hover,
-.button:focus {
-  background-color: var(--brand-color-left);
-  color: var(--light-txt-cl);
-  box-shadow: 0px 3px 1px rgb(0 0 0 / 10%), 0px 1px 2px rgb(0 0 0 / 8%),
-    0px 2px 2px rgb(0 0 0 / 12%);
+  &:hover,
+  &:focus {
+    background-color: var(--brand-color-left);
+    color: var(--light-txt-cl);
+    box-shadow: 0px 3px 1px rgb(0 0 0 / 10%), 0px 1px 2px rgb(0 0 0 / 8%),
+      0px 2px 2px rgb(0 0 0 / 12%);
+  }
 }
 
 .port {
@@ -158,16 +157,15 @@
   display: block;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
+  }
 }
 .project-link:hover .overlay-desc,
 .project-link:focus .overlay-desc {
   transform: translateY(0);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
-}
-
-.project-link:hover,
-.project-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
 }
