--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -82,9 +82,10 @@
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms,
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-}
-.socials__link:hover,
-.socials__link:focus {
+    &:hover,
+    &:focus {
   fill: #fff;
   background-color: var(--brand-color-left);
 }
+}
+
