--- a/sass/layouts/_work.scss
+++ b/sass/layouts/_work.scss
@@ -36,3 +36,19 @@
 .work__item {
   position: relative;
 }
+
+.work__main-title {
+  font-family: var(--main-font);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: calc(42 / 36);
+  color: var(--main-txt-cl);
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.work__img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
